@@ -1,5 +1,6 @@
 0.4.12 (in development)
 ------------------------------------------------------------------------
+- Feature: [#21714] [Plugin] Costume assignment is now tailored to each staff type.
 
 0.4.11 (2024-05-05)
 ------------------------------------------------------------------------
